new node.js configuration

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,8 @@
 [build]
-functions="functions"
+functions="Functions"
+
+[[redirects]]
+  from = "/api/my-function"
+  to = "/.netlify/functions/my-function"
+  status = 200
+  force = true
