--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,7 @@
 [build]
+command='npm run build'
+publish= 'public/'
+functions='function/'
 
-publish= "public/"
-functions="function/"
+[dev]
+port = 3001
