--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "express": "^4.18.2",
     "mysql2": "^3.1.2",
     "netlify-lambda": "^2.0.16"
+  },
+  "scripts": {
+    "build": "npm run build"
   }
 }
